# drabot

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
doc/: links.md
src/drabot/: __about__.py  __init__.py  __main__.py
src/drabot/cli/: __init__.py
